// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> should render a card with dropdownSections only 1`] = `
<styled.div
  color="neutral"
  data-component-type="card"
>
  <Styled(styled.div)
    color="neutral"
    hasHoverStyle={true}
    isExpanded={false}
    onClick={[Function]}
  >
    <styled.div>
      <div>
        test2
      </div>
    </styled.div>
    <DropdownMenu
      hasInitialFocus={false}
      sections={
        Array [
          Object {
            "href": "https://www.google.com.au",
            "text": "action1",
          },
          Object {
            "href": "https://www.google.com.au",
            "text": "action2",
          },
        ]
      }
      toggleComponent={[Function]}
    />
  </Styled(styled.div)>
</styled.div>
`;

exports[`<Card /> should render a card with main content and dropdownSections  1`] = `
<styled.div
  color="neutral"
  data-component-type="card"
>
  <Styled(styled.div)
    color="neutral"
    hasHoverStyle={true}
    isExpanded={false}
    onClick={[Function]}
  >
    <styled.div>
      <div>
        test2
      </div>
    </styled.div>
    <DropdownMenu
      hasInitialFocus={false}
      sections={
        Array [
          Object {
            "href": "https://www.google.com.au",
            "text": "action1",
          },
          Object {
            "href": "https://www.google.com.au",
            "text": "action2",
          },
        ]
      }
      toggleComponent={[Function]}
    />
    <styled.button
      color="neutral"
      hasParentHoverStyle={true}
      isExpanded={false}
    >
      <styled.span>
        <FontAwesomeIcon
          icon="chevron-down"
          type="solid"
        />
      </styled.span>
    </styled.button>
  </Styled(styled.div)>
  <styled.div
    color="neutral"
    isExpanded={false}
  >
    <styled.div>
      <div>
        test2
      </div>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<Card /> should render a card with main content only 1`] = `
<styled.div
  color="neutral"
  data-component-type="card"
>
  <Styled(styled.div)
    color="neutral"
    hasHoverStyle={true}
    isExpanded={false}
    onClick={[Function]}
  >
    <styled.div>
      <div>
        test2
      </div>
    </styled.div>
    <styled.button
      color="neutral"
      hasParentHoverStyle={true}
      isExpanded={false}
    >
      <styled.span>
        <FontAwesomeIcon
          icon="chevron-down"
          type="solid"
        />
      </styled.span>
    </styled.button>
  </Styled(styled.div)>
  <styled.div
    color="neutral"
    isExpanded={false}
  >
    <styled.div>
      <div>
        test2
      </div>
    </styled.div>
  </styled.div>
</styled.div>
`;

exports[`<Card /> should render a card without main content and dropdownSections 1`] = `
<styled.div
  color="neutral"
  data-component-type="card"
>
  <Styled(styled.div)
    color="neutral"
    hasHoverStyle={true}
    isExpanded={false}
    onClick={[Function]}
  >
    <styled.div>
      <div>
        test2
      </div>
    </styled.div>
  </Styled(styled.div)>
</styled.div>
`;
